--- a/src/app/app-components/alert-header/alert-header.style.css
+++ b/src/app/app-components/alert-header/alert-header.style.css
@@ -1,3 +1,12 @@
-:host >>> .usa-alert {
+.usa-alert {
   margin-top: 0;
+}
+
+.usa-alert-body {
+  display: block;
+}
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
