--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -91,7 +91,7 @@
     <section>
       <h2 id="financial-information">Financial Information</h2>
 
-      <div id="visualization"></div>
+      <financial-obligation-chart></financial-obligation-chart>
 
       <h3>Range and Average of Financial Assistance:</h3>
 
