added unique id names for two UI elements

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -34,7 +34,7 @@
   	</div>
     <div *ngIf="!initLoad && !data.results">
       <br/>
-      <p>No results found for '<span [innerText]="oldKeyword"></span>'</p>
+      <p>No results found for '<span id = 'no-results-found' [innerText]="oldKeyword"></span>'</p>
       <div style="height:300px;"></div>
     </div>
 	</div>
