--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -193,3 +193,9 @@
   </div>
 </div>
 
+<div class="usa-grid">
+  <div class="usa-width-one">
+    <h2>Point of Contact &lt;samPOC&gt;</h2>
+    <samPOC [data]="pointOfContact"></samPOC>
+  </div>
+</div>
