--- a/src/app/app-components/alert-header/alert-header.style.scss
+++ b/src/app/app-components/alert-header/alert-header.style.scss
@@ -5,8 +5,17 @@
 .usa-alert-body {
   display: block;
 }
+
 .truncate {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.usa-alert-text {
+  margin-right: 32px;
+}
+
+.title-and-description:not(:first-child), .alert-link {
+  margin-top: 28px;
 }
