--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -30,6 +30,7 @@
 		<div *ngFor="let row of data.results">
 			<opportunities-result *ngIf="row._type=='FBO'" class="usa-grid-full" [data]="row"></opportunities-result>
       <assistance-listing-result  *ngIf="row._type=='CFDA'" class="usa-grid-full" [data]="row"></assistance-listing-result>
+      <federal-hierarchy-result  *ngIf="row._type=='FH'" class="usa-grid-full" [data]="row"></federal-hierarchy-result>
       <hr class="m_T-5x"/>
   	</div>
     <div *ngIf="!initLoad && !data.results">
