--- a/src/app/app.style.css
+++ b/src/app/app.style.css
@@ -11,3 +11,13 @@ html, body{
 .capitalize {
   text-transform: capitalize;
 }
+
+.overlay{
+  background-color:rgba(0,0,0,0.5);
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
