--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -1,26 +1,10 @@
 <div class="usa-grid">
 	<div class="usa-width-one">
-		<h1>SAM.gov Search Results</h1>
+		<h1 class="m_T-0 p_T-6x">SAM.gov Search Results</h1>
 	</div>
   <div class="usa-width-one">
     <samSearchbar (onSearch)="onSearchClick($event)" [keyword]="keyword" [placeholder]="'#keyword'" *ngIf="false"></samSearchbar>
-    <!--<form class="usa-search usa-search-big m_B-3x" (ngSubmit)="runSearch(true)" #f="ngForm">-->
-      <!--<div class="usa-width-one-fourth">-->
-        <!--<label for="index" class="usa-sr-only">Select an index</label>-->
-        <!--<select name="index" id="index" [(ngModel)]="index">-->
-          <!--<option [value]="indexes[0]" selected="true">All</option>-->
-					<!--<option [value]="indexes[1]">Assistance Listings</option>-->
-          <!--<option [value]="indexes[2]">Opportunities</option>-->
-        <!--</select>-->
-      <!--</div>-->
-    	<!--<div role="search" class="usa-width-three-fourths">-->
-        <!--<label class="usa-sr-only" for="search-field-big">Search big</label>-->
-        <!--<input id="search-field-big" type="search" name="keyword" placeholder="#keyword" [(ngModel)]="keyword" autofocus>-->
-        <!--<button type="submit">-->
-          <!--<span class="usa-search-submit-text">Search</span>-->
-        <!--</button>-->
-      <!--</div>-->
-    <!--</form>-->
+
     <div *ngIf="showOptional" class="usa-width-one">
 
       <h3>Common Filters:</h3>
