--- a/src/ui-kit/search-header/search-header.css
+++ b/src/ui-kit/search-header/search-header.css
@@ -8,6 +8,7 @@ samSearchbar {
   width: 500px;
   margin-top: 8px;
   float: left;
+  margin-left: 30px;
 }
 
 header {
@@ -31,4 +32,9 @@ header {
 
 :host >>> select {
   background-color: #e4e2e0;
+}
+
+.align-top{
+  display: inline-block;
+  vertical-align: top;
 }
