move utility css to more appropriate place

--- a/src/app/styles/core/_iae-global.scss
+++ b/src/app/styles/core/_iae-global.scss
@@ -77,6 +77,10 @@ hr {
   font-weight: $font-bold;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .serif {
   font-family: $font-serif;
 }
