Exclicitly include imports instead of using global sass variables

--- a/src/app/styles/_iae-global.scss
+++ b/src/app/styles/_iae-global.scss
@@ -1,8 +1,4 @@
-// Globals
-//
-// Global declarative helper classes.
-//
-// Styleguide globals.global
+@import './variables';
 
 .clearfix:after {
   visibility: hidden;
