--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -1,21 +1,15 @@
-// Vendor main -------------- //
+// Vendor main
 @import 'node_modules/font-awesome/css/font-awesome';
-@import 'node_modules/uswds/src/stylesheets/all';
 
-// SAMWDS Core additions and overrides -------------- //
-@import 'styles/variables'; // override U.S. Web Design Standards defaults
-@import 'styles/utilities';
+// Internal variable should be declared before uswds variable to take higher precendence
 @import 'styles/margin-padding';
 @import 'styles/iae-global';
-
-// SAMWDS Elements additions and overrides -------------- //
-@import 'styles/buttons';
-@import 'styles/inputs';
 @import 'styles/typography';
+
+@import 'node_modules/uswds/src/stylesheets/all';
 
 html, body{
   height: 100%;
-  /*font-family: Arial, Helvetica, sans-serif*/
 }
 
 /* Let content occupy most of the page and show footer when scroll down*/
