--- a/src/app/styles/_utilities.scss
+++ b/src/app/styles/_utilities.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 @mixin box-shadow($horizontal-offset, $vertical-offset, $blur-radius, $spread-radius, $red, $green, $blue, $alpha) {
   box-shadow: $horizontal-offset $vertical-offset $blur-radius $spread-radius rgba($red, $green, $blue, $alpha);
 }
