--- a/src/ui-kit/footer/footer.scss
+++ b/src/ui-kit/footer/footer.scss
@@ -1,3 +1,4 @@
+@import 'src/app/styles/variables';
 @import 'node_modules/uswds/src/stylesheets/all';
 
 .sam-footer-head {
@@ -6,10 +7,6 @@
 
 .sam-footer-links {
   font-size:13px;
-}
-
-h4 {
-  font-family: $font-sans;
 }
 
 .sam-footer-wrapper {
