--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -2,7 +2,7 @@
 <samBanner #banner *ngIf="!isHeaderWithSearch"></samBanner>
 <div [style.padding-top]="isHeaderWithSearch ? '' : '24px'">
   <samSearchHeader *ngIf="isHeaderWithSearch" (searchHeaderDropdownControl)="toggleOverlay($event)" (searchEvent)="onHeaderSearchEvent($event)" [keyword]="keyword" [filterValue]="index"></samSearchHeader>
-  <samHeader *ngIf="!isHeaderWithSearch" (dropdownControl)="toggleOverlay($event)"></samHeader>
+  <samHeader *ngIf="!isHeaderWithSearch" (headerDropdownControl)="toggleOverlay($event)"></samHeader>
 </div>
 
 <main class="occupy-page relative">
