--- a/src/app/application-content/home/home.template.html
+++ b/src/app/application-content/home/home.template.html
@@ -2,7 +2,7 @@
 
   <!--Introduction to the sam.gov website-->
   <div class="usa-grid-full m_B-6x" >
-    <p class="normal-text p_T-6x">
+    <p class="m_0 p_T-6x">
       Bacon ipsum dolor amet picanha frankfurter jerky, cupim tongue
       drumstick filet mignon ribeye porchetta kevin ground round salami spare ribs.
     </p>
