restore margin to their previous state. Assistance listing page and opp. page have same top margin

--- a/src/app/opportunity/opportunity.component.html
+++ b/src/app/opportunity/opportunity.component.html
@@ -14,7 +14,7 @@
 
   <!--Main Content-->
   <div class="usa-width-three-fourths" *ngIf="oNotice">
-    <h1>
+    <h1 class="main-content">
       {{oNotice.procurementTitle}}
     </h1>
     <p>
