fix pagination font

--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -3,7 +3,7 @@
 
 // Internal variable should be declared before uswds variable to take higher precendence
 @import 'styles/margin-padding';
-@import 'styles/iae-global';
+@import 'styles/global';
 @import 'styles/typography';
 
 @import 'node_modules/uswds/src/stylesheets/all';
