--- a/src/ui-kit/pagination/pagination.style.scss
+++ b/src/ui-kit/pagination/pagination.style.scss
@@ -5,7 +5,7 @@
   vertical-align: middle;
   padding: 5px 5px 5px 5px;
   color: #112e51;
-  font-family: @font-sans;
+  font: $font-sans;
   margin-bottom: 0;
   text-decoration: none;
 }
