--- a/src/ui-kit/pagination/pagination.style.scss
+++ b/src/ui-kit/pagination/pagination.style.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   vertical-align: middle;
   padding: 5px 5px 5px 5px;
-  color: #112e51;
+  color: $color-primary-darkest;
   font: $font-sans;
   margin-bottom: 0;
   text-decoration: none;
@@ -18,7 +18,7 @@
   line-height: 40px;
   border: 1px solid #E9E9E9;
   border-radius: 50%;
-  background-color: #112e51;
+  background-color: $color-primary-darkest;
   color: #ffffff !important;
   box-sizing: border-box;
 }
