Fix save navigation operator

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -43,7 +43,7 @@
         {{program?.data?.title}}
       </h1>
 
-      <p *ngIf="program.data?.alternativeNames && program.data.alternativeNames[0] != null">
+      <p *ngIf="program.data?.alternativeNames && program.data?.alternativeNames[0] != null">
         <strong>Popular Name:</strong> {{program.data.alternativeNames[0]}}
       </p>
 
