--- a/src/ui-kit/footer/footer.scss
+++ b/src/ui-kit/footer/footer.scss
@@ -1,5 +1,5 @@
-@import 'src/app/styles/variables';
-@import 'node_modules/uswds/src/stylesheets/all';
+@import 'variables';
+@import '~uswds/src/stylesheets/all';
 
 .sam-footer-head {
   color: #fff;
