--- a/src/ui-kit/header/header.scss
+++ b/src/ui-kit/header/header.scss
@@ -1,5 +1,5 @@
-@import 'src/app/styles/variables';
-@import 'node_modules/uswds/src/stylesheets/all';
+@import 'variables';
+@import '~uswds/src/stylesheets/all';
 
 $header-box-shadow: rgba(1, 2, 2, 0.1);
 
