--- a/src/app/assistance-listing/assistance-listing.style.css
+++ b/src/app/assistance-listing/assistance-listing.style.css
@@ -19,7 +19,7 @@
 .logo{
   margin-top:4.2em;
   width:163px;
-  height:142px
+  height:142px;
 }
 
 .designation {
@@ -29,4 +29,9 @@
 
 .designation h4 {
   margin-top: 0px;
+}
+
+.content-block span {
+  display: block;
+  margin: 3px 0px 3px 0px;
 }
